--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write --ignore-path .gitignore '**/*.{js,jsx,ts,tsx,json,html,css,md}'"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
