--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
+    "clsx": "^1.2.1",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
