--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@radix-ui/react-slot": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.2.1",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "lucide-react": "^0.192.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
