--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tanstack/react-query": "^4.29.5",
         "class-variance-authority": "^0.6.0",
         "clsx": "^1.2.1",
+        "jotai": "^2.0.4",
         "lucide-react": "^0.192.0",
         "next": "^13.2.4",
         "next-auth": "^4.21.0",
