--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "class-variance-authority": "^0.6.0",
         "clsx": "^1.2.1",
         "jotai": "^2.0.4",
+        "langchain": "0.0.70",
         "lucide-react": "^0.192.0",
         "next": "^13.2.4",
         "next-auth": "^4.21.0",
