--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
         "postinstall": "prisma generate",
         "lint": "next lint",
         "start": "next start",
-        "format": "prettier --write --ignore-path .gitignore '**/*.{js,jsx,ts,tsx,json,html,css,md}'"
+        "format": "prettier --write --ignore-path .gitignore '**/*.{js,jsx,ts,tsx,json,html,css,md}'",
+        "open-local-s3": "node ./s3/s3.js"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.331.0",
         "@next-auth/prisma-adapter": "^1.0.5",
         "@prisma/client": "^4.11.0",
         "@radix-ui/react-accordion": "^1.1.1",
@@ -18,8 +20,10 @@
         "@radix-ui/react-slot": "^1.0.1",
         "@t3-oss/env-nextjs": "^0.2.1",
         "@tanstack/react-query": "^4.29.5",
+        "aws-sdk": "^2.1376.0",
         "class-variance-authority": "^0.6.0",
         "clsx": "^1.2.1",
+        "formidable": "^2.1.1",
         "jotai": "^2.0.4",
         "langchain": "0.0.70",
         "lucide-react": "^0.192.0",
@@ -27,6 +31,7 @@
         "next-auth": "^4.21.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "s3rver": "^3.7.1",
         "tailwind-merge": "^1.12.0",
         "tailwindcss-animate": "^1.0.5",
         "zod": "^3.21.4"
@@ -35,6 +40,7 @@
         "@tanstack/eslint-plugin-query": "^4.29.4",
         "@trivago/prettier-plugin-sort-imports": "^4.1.1",
         "@types/eslint": "^8.21.3",
+        "@types/formidable": "^2.0.6",
         "@types/node": "^18.15.5",
         "@types/prettier": "^2.7.2",
         "@types/react": "^18.0.28",
